{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 308,
  "lineage": "2b423e19-7093-bae2-3f12-8cb9b1cca521",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "eigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-06bdcc90aa8202d86",
            "tags": {
              "Name": "techno-eigw"
            },
            "tags_all": {
              "Name": "techno-eigw"
            },
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdab7cf6879cb4b4",
            "arn": "arn:aws:ec2:us-east-1:437248787701:elastic-ip/eipalloc-0fdab7cf6879cb4b4",
            "association_id": "eipassoc-031d36cac1e02fe88",
            "domain": "vpc",
            "id": "eipalloc-0fdab7cf6879cb4b4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a1d4515d9dd6cd14",
            "private_dns": "ip-25-1-0-236.ec2.internal",
            "private_ip": "25.1.0.236",
            "public_dns": "ec2-3-213-237-83.compute-1.amazonaws.com",
            "public_ip": "3.213.237.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "techno-eip-nat"
            },
            "tags_all": {
              "Name": "techno-eip-nat"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:internet-gateway/igw-0cd9789af7facea2b",
            "id": "igw-0cd9789af7facea2b",
            "owner_id": "437248787701",
            "tags": {
              "Name": "techno-igw"
            },
            "tags_all": {
              "Name": "techno-igw"
            },
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdab7cf6879cb4b4",
            "association_id": "eipassoc-031d36cac1e02fe88",
            "connectivity_type": "public",
            "id": "nat-00049c5092deefda4",
            "network_interface_id": "eni-0a1d4515d9dd6cd14",
            "private_ip": "25.1.0.236",
            "public_ip": "3.213.237.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc8c60e8b0e55f8c",
            "tags": {
              "Name": "techno-nat"
            },
            "tags_all": {
              "Name": "techno-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_subnet.sb-public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:route-table/rtb-022e691e9db9ab4ea",
            "id": "rtb-022e691e9db9ab4ea",
            "owner_id": "437248787701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00049c5092deefda4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": null,
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": "eigw-06bdcc90aa8202d86",
                "gateway_id": null,
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "techno-rtb-private"
            },
            "tags_all": {
              "Name": "techno-rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.eip-nat",
            "aws_nat_gateway.nat",
            "aws_subnet.sb-public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:route-table/rtb-0fe00db256798dc41",
            "id": "rtb-0fe00db256798dc41",
            "owner_id": "437248787701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-06bdcc90aa8202d86",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd9789af7facea2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techno-rtb-public"
            },
            "tags_all": {
              "Name": "techno-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049795e8cb3b6490d",
            "route_table_id": "rtb-022e691e9db9ab4ea",
            "subnet_id": "subnet-0ad3f5b06dc4a4dfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.eip-nat",
            "aws_nat_gateway.nat",
            "aws_route_table.rtb-private",
            "aws_subnet.sb-priate-1a",
            "aws_subnet.sb-public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8323d3236006d7d",
            "route_table_id": "rtb-022e691e9db9ab4ea",
            "subnet_id": "subnet-00eeee5444a3ffe30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.eip-nat",
            "aws_nat_gateway.nat",
            "aws_route_table.rtb-private",
            "aws_subnet.sb-priate-1b",
            "aws_subnet.sb-public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sb-1a-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f110236de42cb75",
            "route_table_id": "rtb-0fe00db256798dc41",
            "subnet_id": "subnet-0fc8c60e8b0e55f8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.sb-public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sb-1b-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0328bdf6c72eec893",
            "route_table_id": "rtb-0fe00db256798dc41",
            "subnet_id": "subnet-046cf2f80490d8fa3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb-public",
            "aws_subnet.sb-public-1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apps-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:security-group/sg-03bdb18025c50f081",
            "description": "allow custom port 2000 for apps",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL TRAFFIC IPV4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "ALL TRAFFIC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bdb18025c50f081",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "APPS IPV4 ALL ACCESS",
                "from_port": 2000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2000
              },
              {
                "cidr_blocks": [],
                "description": "APPS IPV6 ALL ACCESS",
                "from_port": 2000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2000
              }
            ],
            "name": "techno-sg-apps",
            "name_prefix": "",
            "owner_id": "437248787701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techno-sg-apps"
            },
            "tags_all": {
              "Name": "techno-sg-apps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:security-group/sg-0cc286ca314c204da",
            "description": "allow http \u0026 https for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL TRAFFIC IPV4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "ALL TRAFFIC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc286ca314c204da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP IPV4 ALL ACCESS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS IPV6 ALL ACCESS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "techno-sg-lb",
            "name_prefix": "",
            "owner_id": "437248787701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techno-sg-lb"
            },
            "tags_all": {
              "Name": "techno-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb-priate-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:subnet/subnet-0ad3f5b06dc4a4dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "25.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad3f5b06dc4a4dfd",
            "ipv6_cidr_block": "2600:1f18:30b2:b503::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0bc236b2517d78d91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437248787701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-priate-subnet-1a"
            },
            "tags_all": {
              "Name": "techno-priate-subnet-1a"
            },
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb-priate-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:subnet/subnet-00eeee5444a3ffe30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eeee5444a3ffe30",
            "ipv6_cidr_block": "2600:1f18:30b2:b504::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0cd6dc77343ab2506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437248787701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-priate-subnet-1b"
            },
            "tags_all": {
              "Name": "techno-priate-subnet-1b"
            },
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:subnet/subnet-0fc8c60e8b0e55f8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "25.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc8c60e8b0e55f8c",
            "ipv6_cidr_block": "2600:1f18:30b2:b501::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a8181de71985413a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437248787701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-public-subnet-1a"
            },
            "tags_all": {
              "Name": "techno-public-subnet-1a"
            },
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb-public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:subnet/subnet-046cf2f80490d8fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "25.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046cf2f80490d8fa3",
            "ipv6_cidr_block": "2600:1f18:30b2:b502::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-084337227ebbb2afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "437248787701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "techno-public-subnet-1b"
            },
            "tags_all": {
              "Name": "techno-public-subnet-1b"
            },
            "vpc_id": "vpc-0251bcc60976aa56e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:437248787701:vpc/vpc-0251bcc60976aa56e",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "25.1.0.0/16",
            "default_network_acl_id": "acl-064b1209878a2a96c",
            "default_route_table_id": "rtb-00cd44f3557122f48",
            "default_security_group_id": "sg-0e55ab9a28d98e548",
            "dhcp_options_id": "dopt-0d9a23fe1179a974f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0251bcc60976aa56e",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-046da602ffe6997be",
            "ipv6_cidr_block": "2600:1f18:30b2:b500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cd44f3557122f48",
            "owner_id": "437248787701",
            "tags": {
              "Name": "techno-ibrahim"
            },
            "tags_all": {
              "Name": "techno-ibrahim"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}